--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <html>
+    <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>I hear you. - COVID-19 call line</title>
+    <link rel="stylesheet" href="app.css">
+  </head>
   <body>
-    <h1>I hear you.</h1>
+    <div class="grid-container">
+      <div class="grid-x grid-padding-x">
+        <div class="large-12 cell">
+          <h1>I hear you.</h1>
 
-    <h2>My name is Marie, and I would like to help.</h2>
+          <h2>My name is Marie, and I would like to help.</h2>
 
-    <p>I am from Rwanda, a place that went through genocide in 1994. The 2020 COVID-19 crisis reminds me so much of that tragedy. Thankfully now we all have one common enemy.</p>
+          <p>I am from Rwanda, a place that went through genocide in 1994. The 2020 COVID-19 crisis reminds me so much of that tragedy. Thankfully now we all have one common enemy.</p>
 
-    <p>I don't have any counseling certification, but I believe and trust from my own experience, I can listen to you and possibly advise you on how to manage your own worries, anxieties, and fears.</p>
+          <p>I don't have any counseling certification, but I believe and trust from my own experience, I can listen to you and possibly advise you on how to manage your own worries, anxieties, and fears.</p>
 
-    <p>I currently live in the LA area but I can listen to anyone from anywhere.</p>
+          <p>I currently live in the LA area but I can listen to anyone from anywhere.</p>
 
-    <p>If you'd like to talk, I am available at ‪<a href="tel:(805) 285-3703‬">(805) 285-3703‬</a>.
+          <p>If you'd like to talk, I am available at ‪<a href="tel:(805) 285-3703‬">(805) 285-3703‬</a>.
+        </div>
+      </div>
+    </div>
   </body>
 </html>
