--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I hear you. - COVID-19 call line</title>
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="./app.css">
   </head>
   <body>
     <div class="grid-container">
