--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
           <p>I currently live in the LA area but I can listen to anyone from anywhere.</p>
 
-          <p>If you'd like to talk, I am available at ‪<a href="tel:(805) 285-3703‬">(805) 285-3703‬</a>.
+          <p>If you'd like to talk, I am available at ‪<a href="tel:(805) 285-3703‬">(805) 285-3703‬</a>. Stay strong and stay resilient. </p>
         </div>
       </div>
     </div>
