--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
   <body>
     <div class="grid-container">
       <div class="grid-x grid-padding-x">
+        <div class="large-12 cell" style="background: blue>
+        </div>
         <div class="large-12 cell">
           <h1>I hear you.</h1>
 
           <h6>My name is Marie, and I would like to help.</h6>
 
           <p>I am from Rwanda, a place that went through genocide in 1994. The 2020 COVID-19 crisis reminds me so much of that tragedy. Thankfully now we all have one common enemy.</p>
+            
+          <p>I used to run a weekly meeting called Tea With Marie where people could come and talk about their problems.
 
           <p>I don't have any counseling certification, but I believe and trust from my own experience, I can listen to you and possibly advise you on how to manage your own worries, anxieties, and fears.</p>
 
-          <p>I currently live in the LA area but I can listen to anyone from anywhere.</p>
+          <p>I currently live in the LA area but I can listen to anyone from anywhere. I just know from deep down we are in all this together, one planet, one humanity. I can listen to you, and give you a shoulder to lean on, and advise you.</p>
 
           <p>If you'd like to talk, I am available at ‪<a href="tel:(805) 285-3703‬">(805) 285-3703‬</a>. Stay strong and stay resilient. </p>
         </div>
