--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="grid-container">
       <div class="grid-x grid-padding-x">
-        <div class="large-12 cell" style="background: blue>
+        <div class="large-12 cell" style="background: blue">
         </div>
         <div class="large-12 cell">
           <h1>I hear you.</h1>
