--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <div class="grid-container">
       <div class="grid-x grid-padding-x">
-        <div class="large-12 cell" style="background: blue">
+        <div class="large-12 cell" style="background: #d2f1fa; margin-bottom:2em">
+            </br>
+            </br>
             </br>
             </br>
         </div>
