--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
           <p>I am from Rwanda, a place that went through genocide in 1994. The 2020 COVID-19 crisis reminds me so much of that tragedy. Thankfully now we all have one common enemy.</p>
             
-          <p>I used to run a weekly meeting called Tea With Marie where people could come and talk about their problems.
+          <p>I used to run a weekly meeting called Tea With Marie where people could come and talk about their problems. They always appreciated when I reminded them to look on the positive side, and remember that things could have been worse. There is always someone going through worse than us and we need to think about them as well.</p>
 
           <p>I don't have any counseling certification, but I believe and trust from my own experience, I can listen to you and possibly advise you on how to manage your own worries, anxieties, and fears.</p>
 
