--- a/index.html
+++ b/index.html
@@ -1,37 +1,22 @@
-<html>
-    <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I hear you. - COVID-19 call line</title>
-    <link rel="stylesheet" href="./app.css">
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <title>Hello, world!</title>
   </head>
   <body>
-    <div class="grid-container">
-      <div class="grid-x grid-padding-x">
-        <div class="large-12 cell" style="background: #d2f1fa; margin-bottom:2em">
-            </br>
-            </br>
-            </br>
-            </br>
-        </div>
-        </div>
-        <div class="large-12 cell">
-          <h1>I hear you.</h1>
+    <h1>Hello, world!</h1>
 
-          <h6>My name is Marie, and I would like to help.</h6>
-
-          <p>I am from Rwanda, a place that went through genocide in 1994. The 2020 COVID-19 crisis reminds me so much of that tragedy. Thankfully now we all have one common enemy.</p>
-            
-          <p>I used to run a weekly meeting called Tea With Marie where people could come and talk about their problems. They always appreciated when I reminded them to look on the positive side, and remember that things could have been worse. There is always someone going through worse than us and we need to think about them as well.</p>
-
-          <p>I don't have any counseling certification, but I believe and trust from my own experience, I can listen to you and possibly advise you on how to manage your own worries, anxieties, and fears.</p>
-
-          <p>I currently live in the LA area but I can listen to anyone from anywhere. I just know from deep down we are in all this together, one planet, one humanity. I can listen to you, and give you a shoulder to lean on, and advise you.</p>
-
-          <p>If you'd like to talk, I am available at ‪<a href="tel:(805) 285-3703‬">(805) 285-3703‬</a>. Stay strong and stay resilient. </p>
-        </div>
-      </div>
-    </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
