--- a/index.html
+++ b/index.html
@@ -12,30 +12,36 @@
   </head>
   <body>
     <div class="container">
-      <div class="col-sm">
+      <div class="row">
+        <div class="col-sm">
+        </div>
       </div>
-      <div class="col-sm">
-        <h1>I hear you.</h1>
+      <div class="row">
+        <div class="col-sm">
+          <h1>I hear you.</h1>
 
-        <h5>My very wise mother liked to tell us that the most important gift that you can give to anyone you care for is your time. Making time for someone is geratand the most precious present because we never have enough time.
-    </h5>
+          <h5>My very wise mother liked to tell us that the most important gift that you can give to anyone you care for is your time. Making time for someone is geratand the most precious present because we never have enough time.
+      </h5>
 
-        <p>When our family moved to the States from Europe and Africa, i tried to connect within my new community by making an effort to make time and reach out. I was interested in getting to know my new community but also giving them an opoprtunity to know me and my family. So when i shared my idea with my friend Jean, she kindly offered to design a flyer. We decided to invite anyone interested to share their time with us at a tea time every other Sunday afternoon.</p>
+          <p>When our family moved to the States from Europe and Africa, i tried to connect within my new community by making an effort to make time and reach out. I was interested in getting to know my new community but also giving them an opoprtunity to know me and my family. So when i shared my idea with my friend Jean, she kindly offered to design a flyer. We decided to invite anyone interested to share their time with us at a tea time every other Sunday afternoon.</p>
 
-        <p>We called our space and gathering time "Tea with Marie". I was truthfully touched and awed by the number of amazing great people who wanted to get together so that we could share tea or coffee but also all kinds of things on their minds. i have to admit that I learned over those days that everyone was interesting and I appreciated the fact that they were equally interested in learning one thing or two from my own life experiences.</p>
+          <p>We called our space and gathering time "Tea with Marie". I was truthfully touched and awed by the number of amazing great people who wanted to get together so that we could share tea or coffee but also all kinds of things on their minds. i have to admit that I learned over those days that everyone was interesting and I appreciated the fact that they were equally interested in learning one thing or two from my own life experiences.</p>
 
-        <p>During these crises of COVID-19 and protests against the racial injustice, it occurred to me that I could relaunch a similar space like "Tea with Marie". This time I want to call it "I hear you world."</p>
+          <p>During these crises of COVID-19 and protests against the racial injustice, it occurred to me that I could relaunch a similar space like "Tea with Marie". This time I want to call it "I hear you world."</p>
 
-        <p>I am not a counselor but I can find enough compassion in myself to be able to lend a heart, an ear, and a shoulder to anyone who wants to strike up a conversation with me.</p>
+          <p>I am not a counselor but I can find enough compassion in myself to be able to lend a heart, an ear, and a shoulder to anyone who wants to strike up a conversation with me.</p>
 
-        <p>Let's just talk. In this space anyone who joins is eually a resourceful community member who has something: a story, an experience, an aspiration that they want to contribute and this is why I am ready to hear you and welcome you.</p>
+          <p>Let's just talk. In this space anyone who joins is eually a resourceful community member who has something: a story, an experience, an aspiration that they want to contribute and this is why I am ready to hear you and welcome you.</p>
 
-        <p>So, are you in? I hear you!!!</p>
+          <p>So, are you in? I hear you!!!</p>
 
-        <p>If you'd like to talk, I am available at ‪<a href="tel:(805) 285-3703‬">(805) 285-3703‬</a>. Stay strong and stay resilient. </p>
+          <p>If you'd like to talk, I am available at ‪<a href="tel:(805) 285-3703‬">(805) 285-3703‬</a>. Stay strong and stay resilient. </p>
+        </div>
       </div>
-      <div class="col-sm">
-      </div
+      <div class="row">
+        <div class="col-sm">
+        </div
+      </div>
      </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
