--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <div class="container">
       <div class="row">
         <div class="col-sm">
+          <h1>I hear you.</h1>
         </div>
       </div>
-      <div class="row">
+      <div class="row align-items-center">
         <div class="col-sm">
-          <h1>I hear you.</h1>
 
           <h5>My very wise mother liked to tell us that the most important gift that you can give to anyone you care for is your time. Making time for someone is geratand the most precious present because we never have enough time.
       </h5>
