--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   </head>
   <body>
     <div class="container">
-      <div class="row mt-2">
+      <div class="row mt-5">
         <div class="col-sm">
           <h1>I hear you.</h1>
         </div>
       </div>
       <div class="row align-items-center">
-        <div class="col-sm mt-3">
+        <div class="col-sm-4 mt-5">
 
           <h5>My very wise mother liked to tell us that the most important gift that you can give to anyone you care for is your time. Making time for someone is geratand the most precious present because we never have enough time.
       </h5>
