--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <div class="col-sm-6 mt-5">
           <h1>I hear you.</h1>
           
-          <h5>My very wise mother liked to tell us that the most important gift that you can give to anyone you care for is your time. Making time for someone is great and the most precious present because we never have enough time.
+          <h5>My very wise mother liked to tell us that the most important gift that you can give to anyone you care for is your time.</h5>
+          
+          <h5>Making time for someone is great and the most precious present because we never have enough time.
       </h5>
         </div>
       </div>
