--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
           <p>I am not a counselor but I can find enough compassion in myself to be able to lend a heart, an ear, and a shoulder to anyone who wants to strike up a conversation with me.</p>
 
-          <p>Let's just talk. In this space anyone who joins is eually a resourceful community member who has something: a story, an experience, an aspiration that they want to contribute and this is why I am ready to hear you and welcome you.</p>
+          <p>Let's just talk. In this space anyone who joins is equally a resourceful community member who has something: a story, an experience, an aspiration that they want to contribute and this is why I am ready to hear you and welcome you.</p>
 
           <p>So, are you in? I hear you!!!</p>
 
