--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="col-sm-6 mt-5">
 
 
-          <p>When our family moved to the States from Europe and Africa, I tried to connect within my new community by making an effort to make time and reach out. I was interested in getting to know my new community but also giving them an opoprtunity to know me and my family. So when I shared my idea with my friend Jean, she kindly offered to design a flyer. We decided to invite anyone interested to share their time with us at a tea time every other Sunday afternoon.</p>
+          <p>When our family moved to the States from Europe and Africa, I tried to connect within my new community by making an effort to make time and reach out. I was interested in getting to know my new community but also giving them an opportunity to know me and my family. So when I shared my idea with my friend Jean, she kindly offered to design a flyer. We decided to invite anyone interested to share their time with us at a tea time every other Sunday afternoon.</p>
 
           <p>We called our space and gathering time "Tea with Marie". I was truthfully touched and awed by the number of amazing great people who wanted to get together so that we could share tea or coffee but also all kinds of things on their minds. I have to admit that I learned over those days that everyone was interesting and I appreciated the fact that they were equally interested in learning one thing or two from my own life experiences.</p>
 
