--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
           <p>Let's just talk. In this space anyone who joins is equally a resourceful community member who has something: a story, an experience, an aspiration that they want to contribute and this is why I am ready to hear you and welcome you.</p>
 
           <p>So, are you in? I hear you!!!</p>
+          
+          <p>Marie</p>
 
         </div>
       </div>
