--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
           <a href="http://ihearyou.world">http://ihearyou.world</a>
 
         </div>
+        <div class="col-sm-6 mt-5">
+          <img src="logo.png" alt="logo" class="img-fluid"/>
+        </div>
       </div>
       <div class="row">
         <div class="col-sm">
