--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
           <h5>Making time for someone is great and the most precious present because we never have enough time.</h5>
             
             
-          <p>If you'd like to talk, I am available at ‪<a href="tel:(805) 285-3703‬">(805) 285-3703‬</a>. Stay strong and stay resilient. </p>
+          <p class="mt-4">If you'd like to talk, I am available at ‪<a href="tel:(805) 285-3703‬">(805) 285-3703‬</a>. Stay strong and stay resilient. </p>
       </h5>
         </div>
       </div>
       <div class="row align-items-center">
-        <div class="col-sm-6 mt-5">
+        <div class="col-sm-6 mt-4">
 
 
           <p>When our family moved to the States from Europe and Africa, I tried to connect within my new community by making an effort to make time and reach out. I was interested in getting to know my new community but also giving them an opportunity to know me and my family. So when I shared my idea with my friend Jean, she kindly offered to design a flyer. We decided to invite anyone interested to share their time with us at a tea time every other Sunday afternoon.</p>
