--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
   <body>
     <div class="container">
       <div class="row mt-5">
-        <div class="col-sm-6 mt-5">
+        
+        <div class="col-sm-6 col-sm-push-6 mt-5">
+          <img src="logo.png" alt="logo" class="img-fluid"/>
+        </div>
+        <div class="col-sm-6 col-sm-pull-6 mt-5">
           <h1 class="font-italic">I hear you.</h1>
           
           <h5>My very wise mother liked to tell us that the most important gift that you can give to anyone you care for is your time.</h5>
@@ -38,9 +42,6 @@
 
           <a href="http://ihearyou.world">http://ihearyou.world</a>
 
-        </div>
-        <div class="col-sm-6 mt-5">
-          <img src="logo.png" alt="logo" class="img-fluid"/>
         </div>
       </div>
       <div class="row align-items-center">
